# passman_cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
migrations/: 001_initial.sql
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/crypto/: encryption.rs  mod.rs  password.rs
src/database/: migrations.rs  models.rs  repository.rs
src/utils/: clipboard.rs  generator.rs  mod.rs
src/web/: handlers.rs  mod.rs  server.rs
static/: index.html
